# mitra

./: .gitignore  README.md  app_icon.icns  build_app.sh  cli.py  install.sh  main.py  pyproject.toml  requirements.txt
site_downloader/: cli.py  downloader.py  gui.py  path_utils.py  worker.py
tests/: test_path_utils.py
