[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "mitra"
version = "0.1.0"
description = "Web sitelerini offline olarak indiren araç"
requires-python = ">=3.10"
dependencies = [
    "playwright>=1.41",
    "beautifulsoup4>=4.12",
]

[project.optional-dependencies]
gui = ["PySide6>=6.6"]

[project.scripts]
mitra = "site_downloader.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["site_downloader*"]
